2014-03-18  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	Submitted by Vishnu KS
	Fix for bug #40595: iotn2313a.h: wrong fuses definitions for High Fuse Byte
	* include/avr/iotn2313a.h: Update high fuse byte definitions.
	* include/avr/iotn4313.h: Same.

2014-03-18  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	Submitted by Vishnu KS
	Fix for bug #41519: wrong SPM_PAGESIZE definition in iotn[48]8.h
	* include/avr/iotn48.h: update SPM_PAGESIZE to 64
	* include/avr/iotn88.h: Same.

2014-03-17  Pitchumani Sivanupandi <pitchumani.s@atmel.com> 

	* include/avr/iox64d3.h (PR_struct): Remove PRPB.
	(CRC_struct): Add CRC definitions.
	Remove incorrect PR definitions.
	* include/avr/iox128d3.h: Same.
	* include/avr/iox192d3.h: Same.
	* include/avr/iox256d3.h (PR_struct): Add power reduction definitions.
	(CRC_struct): Add CRC definitions.
	Add PR and CRC macro definitions.
	* include/avr/power.h: Add power reduction macro docs and update power
	reduction macro definitions for xmega64/128/192/256 D3 devices.